<resources>
    <string name="app_name">WE DO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pending_request">PendingRequest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_username">Enter Username</string>
    <string name="anilfromdit">anilfromdit</string>
    <string name="anil_gulati">Anil Gulati</string>
    <string name="gender">gender</string>
    <string name="title_activity_detailed_profile">DetailedProfile</string>
    <string name="anniversary">Anniversary</string>
    <string name="gender2">Gender</string>
    <string name="loading">Loading...</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="title_activity_main_chat">MainChatActivity</string>
</resources>