<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myrlv"
        android:padding="10dp"
        android:background="@color/black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="120dp"
            android:src="@drawable/logo"
            android:layout_height="120dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_ver"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="83dp"
            android:src="@drawable/check"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="291dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/anilfromdit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_toEndOf="@+id/user_image"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/anil_gulati"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_age"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/nameG"
            android:layout_alignBottom="@+id/nameG"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="-54dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/nameG"
            android:textColor="@color/white"
            android:text="19"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/gender"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/male"
            android:layout_alignEnd="@id/user_age"
            android:layout_marginStart="61dp"
            android:layout_marginEnd="-30dp"
            android:contentDescription="@string/gender"
            android:layout_toEndOf="@+id/user_age"
            />
        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameG"
            android:text="just assume that it's a good bio"
            android:layout_marginStart="13dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/user_image"
            android:textColor="@color/white"
            android:maxWidth="200dp"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_below="@id/username"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>

</FrameLayout>